--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="app.js"></script>
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Muistiinpanot</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Muistiinpanot</h1>
-    <div class="input-section">
-      <input type="text" id="otsikkoInput" placeholder="Syötä otsikko">
-      <textarea id="tekstiInput" placeholder="Syötä teksti"></textarea>
-      <button onclick="lisaaMuistiinpano()">Lisää muistiinpano</button>
-    </div>
-  
-    <div id="muistiinpanot"></div>
+
+<!-- Container elementti, joka määrittää sivuston keskittämisen ja ulkoasun -->
+<div class="container">
+  <!-- Sivuston otsikko -->
+  <h1>Muistiinpanot</h1>
+
+  <!-- Syöttökentät muistiinpanojen lisäämistä varten -->
+  <div class="input-section">
+    <input type="text" id="otsikkoInput" placeholder="Syötä otsikko">
+    <textarea id="tekstiInput" placeholder="Syötä teksti"></textarea>
+    <button onclick="lisaaMuistiinpano()">Lisää muistiinpano</button>
   </div>
+
+  <!-- Tähän lisätään luodut muistiinpanot -->
+  <div id="muistiinpanot"></div>
+</div>
+
+<!-- Script-tagi, joka lataa JavaScript-tiedoston -->
+<script src="app.js"></script>
+
 </body>
 </html>
